[package]
name = "esp-fs-tests"
version = "0.1.0"
authors = ["Scott Mabin <scott@mabez.dev>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "0.30.6", features = ["binstart"] }
esp-idf-svc = "0.37.2"
c_str_macro = "1.0.3"


[build-dependencies]
embuild = "0.28"
anyhow = "1"
